--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  functions = "netlify/functions"
-  publish = "."
+functions = "netlify"
+publish = "."
 
 [[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+from = "/repairs/*"
+to = "/.netlify/functions/:splat"
+status = 200
