--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-functions = "netlify"
-publish = "."
+  functions = "netlify/functions"
+  publish = "."
 
 [[redirects]]
-from = "/repairs/*"
-to = "/.netlify/functions/:splat"
-status = 200
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
